--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@aarc-dev/deposit-widget": "^0.0.64",
     "@aarc-xyz/deposit-widget": "^0.0.9",
+    "@aarc-xyz/deposit-widget-coinbase": "^0.0.1",
+    "@aarc-xyz/deposit-widget-transak": "^0.0.2",
+    "antd": "^5.15.4",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
